# Fast-api-template

./: .gitignore
template_codee/: pyproject.toml
template_codee/app/: main.py
template_codee/app/core/: app_setting.py  db_settings.py
